Make Personalized praise configurable via Special:EditGrowthConfig
Bug: T322446
Change-Id: Ifd1db22cae6ae338daa6bb46391003ca49d4cc00

--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -69,6 +69,13 @@
 	"growthexperiments-edit-config-mentorship-automatic-eligibility-false": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-mentorship-minimum-age": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-mentorship-minimum-editcount": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-personalized-praise": "Subheader in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-personalized-praise-description": "Description of the Personalized praise section in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-personalized-praise-mentors-can-change": "Help message for a form field Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-personalized-praise-notification-frequency": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-personalized-praise-min-edits": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-personalized-praise-days": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-personalized-praise-max-edits": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomertasks": "Subheader in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-description": "Description of the newcomer tasks section in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-disabled": "Label of option to disable newcomer task in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}\n{{Identical|Disabled}}",
