--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -58,6 +58,13 @@
 	"growthexperiments-edit-config-mentorship-automatic-eligibility-false": "No, don't allow any users to enroll as mentors.",
 	"growthexperiments-edit-config-mentorship-minimum-age": "Minimum number of days a user must be registered to sign up as a mentor",
 	"growthexperiments-edit-config-mentorship-minimum-editcount": "Minimum number of edits a user must have made (on any namespace) to sign up as a mentor",
+	"growthexperiments-edit-config-personalized-praise": "Personalized praise",
+	"growthexperiments-edit-config-personalized-praise-description": "Receiving encouraging messages from established editors can improve new editor retention. The Personalized praise module surfaces praiseworthy new editors to their mentor, to help productive new editors feel more engaged and involved in the community.",
+	"growthexperiments-edit-config-personalized-praise-mentors-can-change": "Mentors can change this option for their own user in the Mentor dashboard.",
+	"growthexperiments-edit-config-personalized-praise-notification-frequency": "By default, how often should mentors receive notifications to remind them to send encouragement to mentees who are editing successfully?",
+	"growthexperiments-edit-config-personalized-praise-min-edits": "Default minimum number of edits a mentee must have to be praiseworthy",
+	"growthexperiments-edit-config-personalized-praise-days": "Number of days that are considered when evaluating mentee's praiseworthiness",
+	"growthexperiments-edit-config-personalized-praise-max-edits": "Maximum number of edits an user can have to be considered praiseworthy",
 	"growthexperiments-edit-config-newcomertasks": "Suggested edits",
 	"growthexperiments-edit-config-newcomer-tasks-description": "Some types of suggested edits are surfaced through maintenance templates. Articles containing those templates are added to the feed. To see how many articles are available for each type of task, see [[Special:NewcomerTasksInfo|this page]].",
 	"growthexperiments-edit-config-newcomer-tasks-disabled": "Disabled",
