--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -117,7 +117,7 @@
 	"growthexperiments-mentor-dashboard-mentor-tools-message-change-dialog-message-label": "Introduction message",
 	"growthexperiments-mentor-dashboard-mentor-tools-message-change-dialog-success": "{{GENDER:|Your}} introduction message was changed to \"$1\".",
 	"growthexperiments-mentor-dashboard-personalized-praise-praise-message-title": "Appreciation on a job well done!",
-	"growthexperiments-mentor-dashboard-personalized-praise-praise-message-message": "Hello $1, this is your mentor. Thank you for your contributions. I see you have been busy editing and I just wanted to take a moment to say thanks and that I hope you'll continue to stay involved! Feel free to drop a message on my talk page if you ever have questions. Cheers!",
+	"growthexperiments-mentor-dashboard-personalized-praise-praise-message-message": "Hello $1, this is your mentor. Thank you for your contributions. I see you have been busy editing, and I just wanted to take a moment to thank you and to say that I hope you'll continue to stay involved! Feel free to drop a message on my talk page if you ever have questions. Cheers!",
 	"growthexperiments-mentor-dashboard-personalized-praise-title": "Send appreciation",
 	"growthexperiments-mentor-dashboard-personalized-praise-intro": "Positive messages from experienced users and mentors may help improve new editor retention.",
 	"growthexperiments-mentor-dashboard-personalized-praise-metrics": "Metric: $1 {{PLURAL:$1|edit|edits}} in the last $2 {{PLURAL:$2|day|days}}. Customise these figures in settings.",
