Personalized praise: Remove hardcoded strings in settings
Accidentally, hardcoded strings were present
in PersonalizedPraiseSettingsForm instead of in
the form of i18n messages.

Bug: T322446
Change-Id: I9d61c98c04f5c9dad6b75bd4c777798ab0f3467f

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -132,10 +132,19 @@
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-title": "Settings",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-praiseworthy-metric-headline": "Praise-worthy mentees metric",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-praiseworthy-metric-edits-within-timeframe": "Edits within a time frame",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-praiseworthy-metric-timeframe-48-hours": "Last 48 hours",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-praiseworthy-metric-timeframe-week": "Last week",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-praiseworthy-metric-timeframe-2-weeks": "Last 2 weeks",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-praiseworthy-metric-timeframe-month": "Last month",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-headline": "Your default positive message",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-subject": "Subject",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-placeholder": "...",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-headline": "Notifications",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-immediately": "Immediately",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-daily": "Daily",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-weekly": "Weekly",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-monthly": "Monthly",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-never": "Never",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-pretext": "{{GENDER:|You}} will be notified when a mentee has been displayed for praise.",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-save": "Save",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-cancel": "Cancel",
