Personalized praise: Frontend improvements
This patch:

* moves metrics row display to Vue, to let it update
  when mentors change settings w/o the need for
  a page reload,
* improves error handling,
* improves styling of the settings dialog,
* makes it easier to close the settings dialog w/o saving anything,
* displays a notification after settings are changed,
* ensures getNumberOfTalkPagePosts() does not break when no 2nd-level
  headline is present, and
* adds omitted PLURAL to the metrics message.

Bug: T322443
Bug: T322446
Change-Id: I8e9ac340a33e9bb1ca55662ff0e8b559235af6df

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -120,7 +120,7 @@
 	"growthexperiments-mentor-dashboard-personalized-praise-praise-message-message": "Hello $1, this is your mentor. Thank you for your contributions. I see you have been busy editing and I just wanted to take a moment to say thanks and that I hope you'll continue to stay involved! Feel free to drop a message on my talk page if you ever have questions. Cheers!",
 	"growthexperiments-mentor-dashboard-personalized-praise-title": "Send appreciation",
 	"growthexperiments-mentor-dashboard-personalized-praise-intro": "Positive messages from experienced users and mentors may help improve new editor retention.",
-	"growthexperiments-mentor-dashboard-personalized-praise-metrics": "Metric: $1 edits in $2 days. Customise these figures in settings.  ",
+	"growthexperiments-mentor-dashboard-personalized-praise-metrics": "Metric: $1 {{PLURAL:$1|edit|edits}} in the last $2 {{PLURAL:$2|day|days}}. Customise these figures in settings.",
 	"growthexperiments-mentor-dashboard-personalized-praise-empty-state-footer": "Appreciation-worthy mentees will be shown here.",
 	"growthexperiments-mentor-dashboard-personalized-praise-talk-topics": "$1 talk topics",
 	"growthexperiments-mentor-dashboard-personalized-praise-page-counter": "$1 of $2 {{PLURAL:$2|mentee|mentees}}",
@@ -145,9 +145,10 @@
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-weekly": "Weekly",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-monthly": "Monthly",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-never": "Never",
-	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-pretext": "{{GENDER:|You}} will be notified when a mentee has been displayed for praise.",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-pretext": "{{GENDER:|You}} will be notified when a mentee has been displayed for praise:",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-save": "Save",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-cancel": "Cancel",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-success": "Your personalized praise settings were saved.",
 	"growthexperiments-mentor-list-missing-key": "Key <code>$1</code> is missing",
 	"growthexperiments-mentor-list-datatype-mismatch": "<code>$1</code> is expected to be <code>$2</code>, but is <code>$3</code>",
 	"growthexperiments-mentor-list-unexpected-key-mentor": "Mentor definition contains an unexpected key <code>$1</code>",
