--- a/i18n/homepage/qqq.json
+++ b/i18n/homepage/qqq.json
@@ -586,11 +586,9 @@
 	"growthexperiments-tour-newimpact-discovery-response-button-okay": "Text for button that closes guided tour.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-newimpact-contributions-link": "Text for link to [Special:Contributions] in new impact module.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-levelingup-getstarted-notification-header": "Text shown in header of a notification sent to new editors to encourage them to try suggested edits. Parameters:\n\n* $2 - the user's gender.\n\n{{doc-growthexperiments-homepage}}",
-	"growthexperiments-levelingup-getstarted-notification-body": "Text shown in body of a notification sent to new editors to encourage them to try suggested edits.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-levelingup-getstarted-notification-call-to-action-label": "Text shown in main call to action button from a notification sent to new editors to encourage them to try suggested edits.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-levelingup-getstarted-notification-learnmore-label": "Text shown in secondary call to action from a notification sent to new editors to encourage them to try suggested edits.\n\n{{doc-growthexperiments-homepage}}",
-	"growthexperiments-levelingup-keepgoing-notification-header": "Text shown in header of a notification sent to new editors. Parameters:\n\n* $2 - the user's gender.\n\n{{doc-growthexperiments-homepage}}",
-	"growthexperiments-levelingup-keepgoing-notification-body": "Text shown in body of a notification sent to new editors. Parameters:\n\n* $2 - the user's gender.\n* $3 - the user's edit count.\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-levelingup-keepgoing-notification-header": "Text shown in header of a notification sent to new editors. Parameters:\n\n* $2 - the user's gender.\n* $3 - the user's edit count.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-levelingup-keepgoing-notification-call-to-action-label": "Text shown in label of primary link in a notification sent to new editors.\n\n{{doc-growthexperiments-homepage}}",
 	"echo-category-title-ge-newcomer": "{{doc-echo-category-title|tooltip=Echo-pref-tooltip-ge-newcomer}}",
 	"echo-pref-tooltip-ge-newcomer": "{{doc-echo-pref-tooltip|title=Echo-category-title-ge-newcomer}}"
