Personalized praise settings: Include a help text
The default positive praising message can include
a $1 parameter, which is substituted with the
mentee's username. We need to inform the mentor
that this happen, so they know what $1 stands
for.

Bug: T322446
Change-Id: I679beb0fa913b977c7ddf50b9e04886889cac6ff

--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -145,6 +145,7 @@
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-headline": "Headline in Personalized praise's Settings module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-subject": "Label in Personalized praise's Settings module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-placeholder": "Label in Personalized praise's Settings module\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-help-text": "Helper text in Personalized praise's Settings module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-headline": "Headline in Personalized praise's Settings module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-immediately": "Label in Personalized praise's Settings module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-daily": "Label in Personalized praise's Settings module\n\n{{doc-growthexperiments-mentor-dashboard}}",
