Personalized praise: Finalize i18n messages
Bug: T326961
Change-Id: I1a53f1f28a1913d80a7218a8c9f6451f2ef4e0fa

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -99,8 +99,8 @@
 	"growthexperiments-notification-header-mentee-claimed": "Your {{GENDER:$3|mentee}}, $3, was {{GENDER:$2|claimed}} by $1.",
 	"growthexperiments-notification-body-mentee-claimed": "Reason: $1",
 	"growthexperiments-notification-secondary-link-label-mentee-claimed": "What is \"Claim mentee\"?",
-	"growthexperiments-notification-header-new-praiseworthy-mentees": "Send encouragement to mentees via your Mentor dashboard",
-	"growthexperiments-notification-body-new-praiseworthy-mentees": "Mentees have been displayed on your dashboard for appreciation.",
+	"growthexperiments-notification-header-new-praiseworthy-mentees": "{{GENDER:|You}} have mentees that are praiseworthy!",
+	"growthexperiments-notification-body-new-praiseworthy-mentees": "Send encouragement to mentees via your Mentor dashboard",
 	"growthexperiments-notification-secondary-link-new-praiseworthy-mentees": "View mentor dashboard",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-headline": "Number of mentees assigned to me",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-none": "None (I claim them manually)",
@@ -118,15 +118,15 @@
 	"growthexperiments-mentor-dashboard-mentor-tools-message-change-dialog-success": "{{GENDER:|Your}} introduction message was changed to \"$1\".",
 	"growthexperiments-mentor-dashboard-personalized-praise-praise-message-title": "Appreciation on a job well done!",
 	"growthexperiments-mentor-dashboard-personalized-praise-praise-message-message": "Hello $1, this is your mentor. Thank you for your contributions. I see you have been busy editing, and I just wanted to take a moment to thank you and to say that I hope you'll continue to stay involved! Feel free to drop a message on my talk page if you ever have questions. Cheers!",
-	"growthexperiments-mentor-dashboard-personalized-praise-title": "Send appreciation",
-	"growthexperiments-mentor-dashboard-personalized-praise-intro": "Positive messages from experienced users and mentors may help improve new editor retention.",
+	"growthexperiments-mentor-dashboard-personalized-praise-title": "Send praise",
+	"growthexperiments-mentor-dashboard-personalized-praise-intro": "Positive messages from experienced users and mentors increases editor retention.",
 	"growthexperiments-mentor-dashboard-personalized-praise-metrics": "Metric: $1 {{PLURAL:$1|edit|edits}} in the last $2 {{PLURAL:$2|day|days}}. Customise these figures in settings.",
-	"growthexperiments-mentor-dashboard-personalized-praise-empty-state-footer": "Appreciation-worthy mentees will be shown here.",
+	"growthexperiments-mentor-dashboard-personalized-praise-empty-state-footer": "Praise-worthy mentees will be shown here.",
 	"growthexperiments-mentor-dashboard-personalized-praise-talk-topics": "$1 talk topics",
-	"growthexperiments-mentor-dashboard-personalized-praise-page-counter": "$1 of $2 {{PLURAL:$2|mentee|mentees}}",
+	"growthexperiments-mentor-dashboard-personalized-praise-page-counter": "$1 of $2 praise-worthy {{PLURAL:$2|mentee|mentees}}",
 	"growthexperiments-mentor-dashboard-personalized-praise-page-previous-icon-label": "Previous page",
 	"growthexperiments-mentor-dashboard-personalized-praise-page-next-icon-label": "Next page",
-	"growthexperiments-mentor-dashboard-personalized-praise-send-appreciation": "Send appreciation",
+	"growthexperiments-mentor-dashboard-personalized-praise-send-appreciation": "Send praise",
 	"growthexperiments-mentor-dashboard-personalized-praise-send-appreciation-error-unknown": "Unknown error occurred. Please try again later.",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-cog-icon-label": "Open the settings dialog",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-title": "Settings",
@@ -136,7 +136,7 @@
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-praiseworthy-metric-timeframe-week": "Last week",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-praiseworthy-metric-timeframe-2-weeks": "Last 2 weeks",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-praiseworthy-metric-timeframe-month": "Last month",
-	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-headline": "Your default positive message",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-headline": "Your default message",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-subject": "Subject",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-placeholder": "...",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-help-text": "In the default positive message, $1 is automatically substituted with the mentee's username (if present).",
