--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -234,7 +234,7 @@
 	"growthexperiments-homepage-suggestededits-tasktype-label-expand": "Expand short articles",
 	"growthexperiments-homepage-suggestededits-tasktype-label-links": "Add links between articles",
 	"growthexperiments-homepage-suggestededits-tasktype-label-link-recommendation": "Add links between articles",
-	"growthexperiments-homepage-suggestededits-tasktype-label-image-recommendation": "Add a suggested image",
+	"growthexperiments-homepage-suggestededits-tasktype-label-image-recommendation": "Add an image to an unillustrated article",
 	"growthexperiments-homepage-suggestededits-tasktype-learn-more": "Learn more",
 	"growthexperiments-homepage-suggestededits-tasktype-time-links": "3 - 5 minutes",
 	"growthexperiments-homepage-suggestededits-tasktype-time-copyedit": "5 - 10 minutes",
@@ -265,7 +265,7 @@
 	"growthexperiments-homepage-suggestededits-tasktype-name-expand": "Expand short articles",
 	"growthexperiments-homepage-suggestededits-tasktype-name-links": "Add links between articles",
 	"growthexperiments-homepage-suggestededits-tasktype-name-link-recommendation": "Add links between articles",
-	"growthexperiments-homepage-suggestededits-tasktype-name-image-recommendation": "Add a suggested image",
+	"growthexperiments-homepage-suggestededits-tasktype-name-image-recommendation": "Add an image to an unillustrated article",
 	"growthexperiments-homepage-suggestededits-tasktype-machine-description": "Machine suggestions",
 	"growthexperiments-homepage-suggestededits-topics-match-mode-description": "Choose the option to \"Match all selected topics\" for more specific results",
 	"growthexperiments-homepage-suggestededits-topics-match-mode-all": "Match all selected topics",
@@ -453,7 +453,7 @@
 	"growthexperiments-structuredtask-summary-submit": "Submit",
 	"growthexperiments-structuredtask-other-rejectionreason-placeholder": "Enter reason (optional)",
 	"growthexperiments-addlink-suggestions-outdated": "Another user edited this article while {{GENDER:|you}} were reviewing it, and {{GENDER:|your}} changes could not be published.",
-	"growthexperiments-addimage-inspector-title": "Add a suggested image",
+	"growthexperiments-addimage-inspector-title": "Add an image to an unillustrated article",
 	"growthexperiments-addimage-inspector-cta": "Add this image to the start of the article?",
 	"growthexperiments-addimage-inspector-yes-button": "Yes",
 	"growthexperiments-addimage-inspector-no-button": "No",
