Section images: create task type
* Create a new task type SectionImageRecommendationTaskType,
register a handler and create a placeholder recommendation
provider and submission handler
* Add section-level-image CSS classes to display the new
task type on the selection dialog

Bug: T329275
Change-Id: Ib1f570d516ff11c6e6a7547534572c7f5ba9b316

--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -97,6 +97,7 @@
 	"growthexperiments-edit-config-newcomer-tasks-link-recommendation-excluded-sections": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-image-recommendation-learnmore": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-image-recommendation-maximum-tasks-per-day": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-newcomer-tasks-section-image-recommendation-learnmore": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-machine-suggestions-no-templates": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-excluded-templates": "Description of the excluded templates form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-excluded-categories": "Description of the excluded categories form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
