--- a/i18n/newcomertasks/api/qqq.json
+++ b/i18n/newcomertasks/api/qqq.json
@@ -17,6 +17,7 @@
 	"apihelp-query+growthnextsuggestedtasktype-param-activetasktype": "{{doc-apihelp-param|query+growthnextsuggestedtasktype|activetasktype}}",
 	"apihelp-growthexperiments-structured-task-submit-data-format-link-recommendation": "Documentation for the allowed format of certain API parameters.",
 	"apihelp-growthexperiments-structured-task-submit-data-format-image-recommendation": "Documentation for the allowed format of certain API parameters. Parameters:\n* $1: A comma-separated list of keywords.\n* $2: A number.",
+	"apihelp-growthexperiments-structured-task-submit-data-format-section-image-recommendation": "Documentation for the allowed format of certain API parameters. Parameters:\n* $1: A comma-separated list of keywords.\n* $2: A number.",
 	"apihelp-visualeditoredit-paramvalue-plugins-ge-task-link-recommendation": "{{doc-apihelp-paramvalue|visualeditoredit|plugins|ge-task-link-recommendation}}",
 	"apihelp-visualeditoredit-paramvalue-plugins-ge-task-image-recommendation": "{{doc-apihelp-paramvalue|visualeditoredit|plugins|ge-task-image-recommendation}}",
 	"apihelp-visualeditoredit-append-data-plugin-ge-task-link-recommendation": "Documentation for the <code>data-{plugin}</code> API parameter os the <code>visualeditoredit</code> Action API module for the <code>ge-task-link-recommendation</code> template parameter. $1 is {{msg-mw|apihelp-growthexperiments-structured-task-submit-data-format-link-recommendation}}.",
