ChangeMentor: Do not allow opted-out users to be claimed
Bug: T335462
Change-Id: I981e564c221985293effa4e82a495f5c0a865379

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -172,6 +172,7 @@
 	"growthexperiments-specialimpact-invalid-username": "Missing or invalid username.",
 	"growthexperiments-homepage-claimmentee-no-user": "Mentee doesn't exist",
 	"growthexperiments-homepage-claimmentee-already-mentor": "{{GENDER:$2|You}} already mentor {{GENDER:$1|$1}}",
+	"growthexperiments-homepage-claimmentee-opt-out": "{{GENDER:$1|$1}} opted out of mentorship",
 	"growthexperiments-homepage-enable-preference": "To enable the newcomer homepage, visit your \"Newcomer editor features\" settings in [[Special:Preferences#mw-prefsection-personal-homepage|Preferences]].",
 	"growthexperiments-homepage-contributions-zero-title": "{{GENDER:$1|You}} have not yet made any contributions.",
 	"growthexperiments-homepage-contributions-zero-subtitle": "Visit {{GENDER:$1|your}} homepage to get started with editing!",
