PersonalizedPraise: Make notifications in line with Echo design guide
[[mw:Notifications/Design_guide]] says the body should only be used
for user-generated content, which is not the case in
EchoNewPraiseworthyMenteesPresentationModel at this time. Resolve this
by merging the current header and body into one message.

Bug: T322452
Change-Id: I0ddc907bf4287cd7c0028cf004491d1e0bbe2648

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -99,8 +99,7 @@
 	"growthexperiments-notification-header-mentee-claimed": "Your {{GENDER:$3|mentee}}, $3, was {{GENDER:$2|claimed}} by $1.",
 	"growthexperiments-notification-body-mentee-claimed": "Reason: $1",
 	"growthexperiments-notification-secondary-link-label-mentee-claimed": "What is \"Claim mentee\"?",
-	"growthexperiments-notification-header-new-praiseworthy-mentees": "{{GENDER:|You}} have mentees that are praiseworthy!",
-	"growthexperiments-notification-body-new-praiseworthy-mentees": "Send encouragement to mentees via your Mentor dashboard",
+	"growthexperiments-notification-header-new-praiseworthy-mentees": "{{GENDER:|You}} have mentees that are praiseworthy! Send encouragement to mentees via your Mentor dashboard.",
 	"growthexperiments-notification-secondary-link-new-praiseworthy-mentees": "View mentor dashboard",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-headline": "Number of mentees assigned to me",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-none": "None (I claim them manually)",
