Personalized praise: Minor improvements
* Fixes a typo in an i18n message
* Fixes a typo in PersonalizedPraiseSettingsForm (2 weeks is 14 days,
  not 15 as previously stated)
* Bolds the Metric word on top of the Personalized praise module.

Bug: T334300
Change-Id: Iafbd8ec7fd6fba9a4c18d13a9b77957f2db8536f

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -118,8 +118,8 @@
 	"growthexperiments-mentor-dashboard-personalized-praise-praise-message-title": "Appreciation on a job well done!",
 	"growthexperiments-mentor-dashboard-personalized-praise-praise-message-message": "Hello $1, this is your mentor. Thank you for your contributions. I see you have been busy editing, and I just wanted to take a moment to thank you and to say that I hope you'll continue to stay involved! Feel free to drop a message on my talk page if you ever have questions. Cheers!",
 	"growthexperiments-mentor-dashboard-personalized-praise-title": "Send praise",
-	"growthexperiments-mentor-dashboard-personalized-praise-intro": "Positive messages from experienced users and mentors increases editor retention.",
-	"growthexperiments-mentor-dashboard-personalized-praise-metrics": "Metric: $1 {{PLURAL:$1|edit|edits}} in the last $2 {{PLURAL:$2|day|days}}. Customise these figures in settings.",
+	"growthexperiments-mentor-dashboard-personalized-praise-intro": "Positive messages from experienced users and mentors increase editor retention.",
+	"growthexperiments-mentor-dashboard-personalized-praise-metrics": "<strong>Metric</strong>: $1 {{PLURAL:$1|edit|edits}} in the last $2 {{PLURAL:$2|day|days}}. Customise these figures in settings.",
 	"growthexperiments-mentor-dashboard-personalized-praise-empty-state-footer": "Praise-worthy mentees will be shown here.",
 	"growthexperiments-mentor-dashboard-personalized-praise-talk-topics": "$1 talk topics",
 	"growthexperiments-mentor-dashboard-personalized-praise-page-counter": "$1 of $2 praise-worthy {{PLURAL:$2|mentee|mentees}}",
