--- a/i18n/homepage/api/qqq.json
+++ b/i18n/homepage/api/qqq.json
@@ -17,6 +17,7 @@
 	"apihelp-query+growthimagesuggestiondata-param-tasktype": "{{doc-apihelp-param|growthimagesuggestiondata|tasktype}}",
 	"apihelp-growthinvalidateimagerecommendation-summary": "{{doc-apihelp-summary|growthinvalidateimagerecommendation}}",
 	"apihelp-growthinvalidateimagerecommendation-extended-description": "{{doc-apihelp-extended-description|growthimagesuggestiondata}}",
+	"apihelp-growthinvalidateimagerecommendation-param-tasktype": "{{doc-apihelp-param|growthinvalidateimagerecommendation|tasktype}}",
 	"apihelp-growthinvalidateimagerecommendation-param-title": "{{doc-apihelp-param|growthinvalidateimagerecommendation|title}}",
 	"apihelp-growthinvalidateimagerecommendation-param-filename": "{{doc-apihelp-param|growthinvalidateimagerecommendation|filename}}"
 }
