Section images: add quick tips help texts
Bug: T335227
Change-Id: Ied981fa84562bace6364cf462db735576fec1281

--- a/i18n/help/en.json
+++ b/i18n/help/en.json
@@ -139,6 +139,18 @@
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-image-recommendation-header-step3": "Decide if the image belongs",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-image-recommendation-main-multiple-1-step3": "The suggestion may be unrelated to the article, low quality, or may not belong for other reasons. Use {{GENDER:|your}} judgment to decide whether the suggestion is right or wrong.",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-image-recommendation-main-multiple-2-step3": "For images that {{GENDER:|you}} accept, {{GENDER:|you'll}} write a short caption, and then {{GENDER:|your}} edit will be published.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-header-value": "Images help people learn, but many articles don't have one.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-main-multiple-1-value": "{{GENDER:|You}} will decide whether a suggested image should be put in a specific section of a Wikipedia article.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-main-multiple-2-value": "Suggestions are machine-generated, and {{GENDER:|you'll}} use {{GENDER:|your}} judgment to decide whether to accept or reject it.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-text-value": "Images come from Wikimedia Commons, a collection of freely licensed images used by Wikipedia.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-header-step1": "Look at the suggested image",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-main-multiple-1-step1": "Use the filename, description, and the reason it was suggested to help {{GENDER:|you}} decide if it should be placed in the article.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-main-multiple-2-step1": "{{GENDER:|You}} can also expand the image to view it more clearly.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-header-step2": "Look at both the article and its section",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-main-step2": "Read over the article and its section and think about whether the suggested image will help readers understand the content. Is it appropriate to be displayed in the section?",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-header-step3": "Decide if the image belongs",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-main-multiple-1-step3": "The suggestion may be unrelated to the section, low quality, or may not belong for other reasons. Use {{GENDER:|your}} judgment to decide whether the suggestion is right or wrong.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-main-multiple-2-step3": "For images that {{GENDER:|you}} accept, {{GENDER:|you'll}} write a short caption, and then {{GENDER:|your}} edit will be published.",
 	"growthexperiments-help-panel-questioncomplete-title": "Ask a question",
 	"growthexperiments-help-panel-questioncomplete-header": "Your question has been published!",
 	"growthexperiments-help-panel-questioncomplete-confirmation-text": "Your question is now on the Community Help Desk for it to be answered by another volunteer editor.",
