addsectionimage: Introduce quality gate infrastructure
Similar to I9132342662c289945b25011091489e21a2bf8b7c, but stops short of
implementing the submission handling logic; we will implement that in a
follow-up.

For now, this patch gets various pieces in place so that we don't have
JS errors when visiting a section-level image article from Special:Homepage.

Bug: T336550
Change-Id: Ieab523b0f10836c6197ab743f0e1ae5d005724b3

--- a/i18n/help/en.json
+++ b/i18n/help/en.json
@@ -18,10 +18,13 @@
 	"growthexperiments-help-panel-postedit-success-message-saved": "{{GENDER:|You've}} saved an edit. Thanks and keep going!",
 	"growthexperiments-help-panel-postedit-success-message-notsaved": "Thanks for reviewing suggestions. Keep going!",
 	"growthexperiments-help-panel-postedit-success-message-allavailabletasksdone-image-recommendation": "All available add image articles for today are complete. Well done!",
+	"growthexperiments-help-panel-postedit-success-message-allavailabletasksdone-section-image-recommendation": "All available section-image suggestion articles for today are complete. Well done!",
 	"growthexperiments-help-panel-postedit-success-message-allavailabletasksdone-link-recommendation": "All available link suggestion articles for today are complete. Well done!",
 	"growthexperiments-help-panel-postedit-header": "Next steps",
 	"growthexperiments-help-panel-postedit-subheader-image-recommendation": "More ways to edit",
 	"growthexperiments-help-panel-postedit-subheader2-image-recommendation": "Try another type of edit or come back tomorrow for more image suggestions.",
+	"growthexperiments-help-panel-postedit-subheader-section-image-recommendation": "More ways to edit",
+	"growthexperiments-help-panel-postedit-subheader2-section-image-recommendation": "{{GENDER:|You}} have completed all of today's section-level image suggestions. Adjust {{GENDER:|your}} difficulty levels to see other types of tasks or come back tomorrow for more image suggestions.",
 	"growthexperiments-help-panel-postedit-subheader-link-recommendation": "More ways to edit",
 	"growthexperiments-help-panel-postedit-subheader2-link-recommendation": "Try another type of edit or come back tomorrow for more link suggestions.",
 	"growthexperiments-help-panel-postedit-subheader": "Edit another suggestion:",
