--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -537,6 +537,8 @@
 	"growthexperiments-addimage-caption-warning-tooshort": "Captions must be $1 {{PLURAL:$1|character|characters}} or longer.",
 	"growthexperiments-addlink-daily-task-limit-exceeded": "{{GENDER:|You}} have completed all of today's link suggestions.\n\nAdjust {{GENDER:|your}} difficulty levels to see other types of edits or come back tomorrow for more link suggestions.",
 	"growthexperiments-addlink-daily-task-limit-exceeded-dialog-button": "Got it",
+	"growthexperiments-addsectionimage-daily-task-limit-exceeded": "{{GENDER:|You}} have completed all of today's section-level image suggestions.\n\nAdjust {{GENDER:|your}} difficulty levels to see other types of edits or come back tomorrow for more image suggestions.",
+	"growthexperiments-addsectionimage-daily-task-limit-exceeded-dialog-button": "Got it",
 	"growthexperiments-homepage-mentorship-optin-header": "Mentor for editing",
 	"growthexperiments-homepage-mentorship-optin-text": "If {{GENDER:|you}} have questions about editing, an experienced editor can be assigned as your mentor to help you.",
 	"growthexperiments-homepage-mentorship-optin-button": "Get a mentor",
