--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -537,6 +537,7 @@
 	"growthexperiments-addimage-caption-warning-tooshort": "Captions must be $1 {{PLURAL:$1|character|characters}} or longer.",
 	"growthexperiments-addlink-daily-task-limit-exceeded": "{{GENDER:|You}} have completed all of today's link suggestions.\n\nAdjust {{GENDER:|your}} difficulty levels to see other types of edits or come back tomorrow for more link suggestions.",
 	"growthexperiments-addlink-daily-task-limit-exceeded-dialog-button": "Got it",
+	"growthexperiments-addsectionimage-caption-placeholder": "Write a short caption describing how this image is relevant to both the <strong>$1</strong> article and its <strong>$2</strong> section",
 	"growthexperiments-addsectionimage-daily-task-limit-exceeded": "{{GENDER:|You}} have completed all of today's section-level image suggestions.\n\nAdjust {{GENDER:|your}} difficulty levels to see other types of edits or come back tomorrow for more image suggestions.",
 	"growthexperiments-addsectionimage-daily-task-limit-exceeded-dialog-button": "Got it",
 	"growthexperiments-homepage-mentorship-optin-header": "Mentor for editing",
