Section images: Add caption help
* Clone AddImageCaptionInfoDialog.js, deduplicate logic
* Duplicate i18n messages

Bug: T335232
Change-Id: I7b4f34735e9e08a7d36804ccbff99e06636bb84c

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -538,6 +538,13 @@
 	"growthexperiments-addlink-daily-task-limit-exceeded": "{{GENDER:|You}} have completed all of today's link suggestions.\n\nAdjust {{GENDER:|your}} difficulty levels to see other types of edits or come back tomorrow for more link suggestions.",
 	"growthexperiments-addlink-daily-task-limit-exceeded-dialog-button": "Got it",
 	"growthexperiments-addsectionimage-caption-placeholder": "Write a short caption describing how this image is relevant to both the <strong>$1</strong> article and its <strong>$2</strong> section",
+	"growthexperiments-addsectionimage-caption-info-dialog-title": "Write a caption to go with the image in the article section",
+	"growthexperiments-addsectionimage-caption-info-dialog-message": "Readers of <strong>$1</strong> will see the caption displayed under the image.",
+	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-review": "Review the image details again for information that is relevant to include.",
+	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-describe": "Describe the image so it’s clear how it relates to the <strong>$1</strong> article and its <strong>$2</strong> section.",
+	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-neutral": "Stay neutral by avoiding judgments like “good”, “ugly”, or “beautiful”.",
+	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-language": "Write in this article's language: $1.",
+	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-language-generic": "Write in the language of the Wikipedia {{GENDER:|you}} are in.",
 	"growthexperiments-addsectionimage-daily-task-limit-exceeded": "{{GENDER:|You}} have completed all of today's section-level image suggestions.\n\nAdjust {{GENDER:|your}} difficulty levels to see other types of edits or come back tomorrow for more image suggestions.",
 	"growthexperiments-addsectionimage-daily-task-limit-exceeded-dialog-button": "Got it",
 	"growthexperiments-homepage-mentorship-optin-header": "Mentor for editing",
